# shortener-url

./: Cargo.toml  docker-compose.yml  readme.md
migrations/: 20250318004755_create_table.sql
src/: error.rs  main.rs  model.rs
src/constants/: postgres.rs
src/features/: mod.rs
src/web/: middleware_auth.rs  mod.rs  routes_login.rs  routes_redirect.rs  routes_shortener.rs  routes_tickets.rs
tests/: quick_dev.rs
