[package]
name = "shortener-url"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
nom = "8.0.0"
serde = {version= "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid"] }
tokio = {version = "1.44.1", features = ["full"]}
tower-cookies = "0.11.0"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0.97"
httpc-test = "0.1.10"
